Resolved the reported issue concerning column name for samples. The library used for managing and identifying zooms previously assumed CMP as the name for the samples column. To align with GrapeTree's original behavior, we now dynamically pass this value. If there is in metadata file a column with the header ID, we assume it to be the samples column; otherwise, we default to the first column. Added support for zip file icon.

--- a/css/iconic.css
+++ b/css/iconic.css
@@ -1,5 +1,5 @@
 /*
-  iconic-v1.9
+  iconic-v2.0
 */
 
 @font-face {
@@ -692,6 +692,9 @@ i.iconic.iconic-number {
 }
 .iconic-rotate:before {
   content: "\e9d8";
+}
+.iconic-zip-file:before {
+  content: "\e9d9";
 }
 .iconic-number-0:before {
   content: "0";
